[package]
name = "socket-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = "0.5.10"
prost = "0.14.1"
tokio = { version = "1.30", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "sync"] }
libc = "0.2.174"
once_cell = "1.17"

[build-dependencies]
prost-build = "0.14.1"
